--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="https://kit.fontawesome.com/484c5452ee.js" crossorigin="anonymous"></script>
     <!-- bootstrap stysheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- header start -->
@@ -44,7 +45,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-.panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
@@ -59,7 +60,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-.panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports
 
@@ -75,7 +76,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-.panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room
                                 </h1>
@@ -228,7 +229,7 @@
         </section>
         <!-- subscribe  -->
         <section style="height: 300px;" id="subscribe"
-            class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3">
+            class="container panda-.panda-bg-info d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
